2004-06-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* */Makefile.am: stop automake nagging
	* libvncclient/*, client_examples/*: streamline API, SDLvncviewer added
	* examples/, libvncclient/, test/: moved tests to test/

2004-06-05  Karl Runge <runge@karlrunge.com>
	* x11vnc: rearrange file for easier maintenance
	* add RFB_CLIENT_COUNT to -accept and -gone commands

2004-05-27  Karl Runge <runge@karlrunge.com>
	* x11vnc: -viewpasswd, viewonly passwds.
	* some typos in prepare_x11vnc_dist.sh 
	* libvncserver: fix view-only plain passwd and view-only CutText 

2004-05-25  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* moved the library into libvncserver/
	* moved x11vnc into x11vnc/

2004-05-21  Karl Runge <runge@karlrunge.com>
	* x11vnc: -gone, -passwdfile, -o logfile; add view-only to -accept

2004-05-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -accept some-command/xmessage/popup

2004-05-05  Karl Runge <runge@karlrunge.com>
	* x11vnc: mouse button -> keystrokes and keystroke -> mouse button
	  mappings in -buttonmap and -remap
	* shm OS blacklist revert to -onetile

2004-04-28  Karl Runge <runge@karlrunge.com>
	* x11vnc: -auth, more -cursorpos and -nofb work

2004-04-19  Karl Runge <runge@karlrunge.com>
	* x11vnc: -cursorpos, -sigpipe

2004-04-13  Karl Runge <runge@karlrunge.com>
	* x11vnc: do not send selection unless all clients
	  are in RFB_NORMAL state.
	* increase rfbMaxClientWait when threaded to avoid
	  ReadExact() timeouts for some viewers.

2004-04-08  Karl Runge <runge@karlrunge.com>
	* x11vnc options -blackout, -xinerama, -xwarppointer
	* modify configure.ac to pick up -lXinerama
	* extend -remap to take mapping list.
	* check cargs result for unused args.

2004-03-22  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* fix cargs.c (hopefully for the last time):
	  arguments were not correctly purged

2004-03-15  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>